Development
    Fix spelling mistake, but then comment out as not needed for normal usage Issue #163
1.0.5
    Disable playing of partially cached apple.com files, mplayer seems to crash on these files
    Use the right schema file, can't believe this one has slipped by so long.
    Use better const check from Issue #161, patch from i.stakenvicius
1.0.5b2
    Simpifying const check until something better comes along Issue #162
    Fix Issue #161, improvements over last patch because NPAPI not properly bumped
    Fix support for older xulrunners, Issue #160, issue caused by patch from
    Issue #158
    Support nsapi-sdk, based on patch from Issue #159
    Fix up some const casting so that compilers do not complain Issue #158
    Updated Japanese translation
    Updated Italian translation
1.0.5b1
    When uri is a file:// uri, just play it directly
    Switch from AM_MAINTAINER_MODE to AM_MAINTAINER_MODE([enable]) in configure.in
    Fix Issue #150, return value for function that says it will
    Updated Dutch translation
    Conversion to using libgmtk as separate library
    Improvements to the apple.com/trailers fix, caching now works properly
    Fix regression at apple.com/trailers, side effect of fully caching the file for now
1.0.4
	Fix problem where file is downloaded before gnome-mplayer is started (locally cached)
	Added Portuguese translation
	Remove some whitespace
	Updated French translation
	Updated Polish translation
	Updated Turkish translation
1.0.4b2
	If http is found in the URL it may not be a stream (this might break some sites)
	Get status messages looking better, requires gnome-mplayer from SVN on same date
	Disable Windows OnDSPlayStateChangeEvt callback
	Emulate WMP status
	Emulate WMP versionInfo
	Add in some more WMP javascript emulation
	Align PlayStateChanges similar to WMP
	Rework how media events are handled
	Fix problems with SetVolume
	Remove a couple of state change callbacks to stop fork bomb